--- a/index.html
+++ b/index.html
@@ -4,72 +4,225 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Store99</title>
+    <title>AutoKH</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="header">
-        <h2>Store99</h2>
-        <div class="social-icons">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Facebook_Logo_%282019%29.png/500px-Facebook_Logo_%282019%29.png"
-                alt="Facebook">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"
-                alt="Instagram">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Telegram_logo.svg/1024px-Telegram_logo.svg.png?20220101141644"
-                alt="Telegram">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <!-- <a class="navbar-brand" href="#">
+            <img src="./images/Logo_AutoKH.png" alt="Logo" style="width: 100px; height: 100px;">
+        </a> -->
+        <div class="container-fluid">
+            <h3>AutoKH</h3>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="nav nav-underline navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item me-3">
+                        <a class="nav-link" aria-current="page" href="#">Buy</a>
+                    </li>
+                    <li class="nav-item me-3">
+                        <a class="nav-link" href="#">Sell</a>
+                    </li>
+                    <li class="nav-item dropdown me-3">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Research
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                </ul>
+                <div class="d-flex ms-auto">
+                    <button class="btn btn-outline-primary me-2">Login</button>
+                    <button class="btn btn-primary">Sign Up</button>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <!-- Image carousel -->
+    <div class="container-fluid">
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./images/hero_large.jpg" class="d-block w-100" alt="slide-1"
+                        style="width: 960px; height: 540px;">
+                </div>
+                <div class="carousel-item">
+                    <img src="./images/car-buyer.jpeg" class="d-block w-100" alt="slide-2"
+                        style="width: 960px; height: 540px;">
+                </div>
+                <div class="carousel-item">
+                    <img src="./images/car-sale.png" class="d-block w-100" alt="slide-3"
+                        style="width: 960px; height: 540px;">
+                </div>
+            </div>
+        </div>
+        <!-- Search Box -->
+        <div class="container shadow-lg p-3 mb-5 bg-body-tertiary rounded">
+            <div class="container text-start">
+                <div class="row mb-3 mt-4">
+                    <div class="col">
+                        Find your next Car
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <div class="col">
+                        Make
+                    </div>
+                    <div class="col">
+                        Model
+                    </div>
+                    <div class="col">
+                        Body Type
+                    </div>
+                    <div class="col">
+                        Location
+                    </div>
+                    <div class="col">
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <div class="col">
+                        <select class="form-select" aria-label="Default select example">
+                            <option selected>Lexus</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                        </select>
+                    </div>
+                    <div class="col">
+                        <select class="form-select" aria-label="Default select example">
+                            <option selected>All Models</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                        </select>
+                    </div>
+                    <div class="col">
+                        <select class="form-select" aria-label="Default select example">
+                            <option selected>All body types</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                        </select>
+                    </div>
+                    <div class="col">
+                        <select class="form-select" aria-label="Default select example">
+                            <option selected>All states</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                        </select>
+                    </div>
+                    <div class="col">
+                        <button type="button" class="btn btn-outline-primary">Show</button>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center border-top row mb-3">
+                <div class="col mt-3">
+                    <img src="./images/Brand-new.png" alt="Car" width="80%">
+                    <p>Brand New</p>
+                </div>
+                <div class="col mt-3">
+                    <img src="./images/SUV.png" alt="Car" width="80%">
+                    <p>SUV</p>
+                </div>
+                <div class="col mt-3">
+                    <img src="./images/Ute.png" alt="Car" width="80%">
+                    <p>Ute</p>
+                </div>
+                <div class="col mt-3">
+                    <img src="./images/Hatch.png" alt="Car" width="80%">
+                    <p>Hatch</p>
+                </div>
+                <div class="col mt-3">
+                    <img src="./images/offroad.png" alt="Car" width="80%">
+                    <p>Offroad 4x4</p>
+                </div>
+                <div class="col mt-3">
+                    <img src="./images/Electric.png" alt="Car" width="80%">
+                    <p>Electric</p>
+                </div>
+                <div class="col mt-3">
+                    <img src="./images/Performance.png" alt="Car" width="80%">
+                    <p>Performance</p>
+                </div>
+                <div class="col mt-3">
+                    <img src="./images/unique.png" alt="Car" width="80%">
+                    <p>Unqiue</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Grid Boxs -->
+        <div class="container">
+            <div class="row mt-4">
+                <div class="col-6 col-md-4 col-lg-3 mb-4">
+                    <div class="card">
+                        <img src="./images/rx500h.webp" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">2025 Lexus RX 500H</h5>
+                            <p class="card-text">turbocharged 2.4L four-cylinder hybrid engine</p>
+                            <a href="#" class="btn btn-primary">Details</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-6 col-md-4 col-lg-3 mb-4">
+                    <div class="card">
+                        <img src="./images/LC-lexus.avif" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">2025 Lexus LC 500</h5>
+                            <p class="card-text">5.0-liter naturally aspirated V8 engine that produces 471 horsepower
+                                and
+                                398 pound-feet of torque.</p>
+                            <a href="#" class="btn btn-primary">Details</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-6 col-md-4 col-lg-3 mb-4">
+                    <div class="card">
+                        <img src="./images/Nx-200.avif" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">2025 Lexus NX 250</h5>
+                            <p class="card-text">2.5-liter 4-cylinder engine that produces 203 horsepower and 184 lb-ft
+                                of
+                                torque.</p>
+                            <a href="#" class="btn btn-primary">Details</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-md-4 col-lg-3 mb-4">
+                    <div class="card">
+                        <img src="./images/lx-2025.avif" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">2025 Lexus LX 600H</h5>
+                            <p class="card-text">3.5L twin-turbo V6 engine that produces 409 horsepower and 479 lb-ft of
+                                torque.</p>
+                            <a href="#" class="btn btn-primary">Details</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="cards-container">
-        <div class="card max">
-            <p>New!</p>
-            <h1><strong>iPhone 17 Pro | Pro Max</strong></h1>
-            <p>New opportunities in a bright case!</p>
-            <p>On sale!</p>
-
-            <img src="https://fdn2.gsmarena.com/vv/pics/apple/apple-iphone-17-pro-max-1.jpg" alt="iPhone 17 Pro">
-        </div>
-        <div class="card iphone17">
-            <p>New!</p>
-            <h1><strong>iPhone 17</strong></h1>
-            <p>Even more delightful.
-                Even more durable.</p>
-            <p>On sale!</p>
-
-            <img src="https://fdn2.gsmarena.com/vv/pics/apple/apple-iphone-17-1.jpg" alt="iPhone 17">
-        </div>
-        <div class="card air">
-            <p>New!</p>
-            <h1><strong>iPhone 17 Air</strong></h1>
-            <p>The thinnest iPhone ever.</p>
-            <p>On sale!</p>
-
-            <img src="https://fdn2.gsmarena.com/vv/pics/apple/apple-iphone-air-1.jpg" alt="iPhone 17 Air">
-        </div>
-        <div class="card pixelfold">
-            <p>New!</p>
-            <h1><strong>Google Pixel 10 Pro Fold</strong></h1>
-            <p>On sale!</p>
-            <img src="https://fdn2.gsmarena.com/vv/pics/google/google-pixel-10-pro-fold-00.jpg"
-                alt="Google Pixel 10 Fold">
-        </div>
-        <div class="card pixelpro">
-            <p>New!</p>
-            <h1><strong>Google Pixel 10 Pro</strong></h1>
-            <p>On sale!</p>
-            <img src="https://fdn2.gsmarena.com/vv/pics/google/google-pixel-10-pro-11.jpg" alt="Google Pixel 10 Pro">
-        </div>
-        <div class="card pixel">
-            <p>New!</p>
-            <h1><strong>Google Pixel 10</strong></h1>
-            <p>On sale!</p>
-            <img src="https://fdn2.gsmarena.com/vv/pics/google/google-pixel-10-11.jpg" alt="Google Pixel 10">
-        </div>
-    </div>
-
-    <div class="Footer">
-        <p>Copyright © 2025 by Store99 All right reserved.</p>
-    </div>
+    <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
