--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <!-- <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="#">
             <img src="./images/Logo_AutoKH.png" alt="Logo" style="width: 100px; height: 100px;">
-        </a> -->
+        </a>
         <div class="container-fluid">
-            <h3>AutoKH</h3>
+            <!-- <h3>AutoKH</h3> -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
